# madlibc

./: Makefile  Makefile.am  Makefile.in  README.md  config.h  config.h.in  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
doc/: Makefile  Makefile.am  Makefile.in
examples/: Makefile  Makefile.am  Makefile.in  automata  automata.c  basic  basic.c  random.c  signal  signal.c  time  time.c
examples/.deps/: automata.Po  basic.Po  random.Po  signal.Po  time.Po
include/: Makefile  Makefile.am  Makefile.in  dict.h  madconsole.h  madmacro.h  madmath.h  stdio.h  stdlib.h  string.h
src/: Makefile  Makefile.am  Makefile.in  dict.c  libtime.la  signal.c  stdio.c  stdlib.c  string.c  time.c  unistd.c
src/.deps/: libio_la-stdio.Plo  libmadlibc_a-madlibc.Po  libmadlibc_a-unistd.Po  libmadrandom_la-madrandom.Plo  libmadtime_a-madtime.Po  libmc_a-dict.Po  libmc_a-madlibc.Po  libmc_a-signal.Po  libmc_a-stdio.Po  libmc_a-stdlib.Po  libmc_a-string.Po  libmc_a-time.Po  libmc_a-unistd.Po  libstring_la-string.Plo  libtime_la-time.Plo  madlibc.Po  madrandom.Po  madtime.Po
