
AM_CFLAGS  = -Wall -Werror -nodefaultlibs -I$(top_srcdir)/include

bin_PROGRAMS = basic automata time signal

basic_SOURCES = basic.c
basic_LDADD = ../src/libmc.a

time_SOURCES = time.c
time_LDADD = ../src/libmc.a

automata_SOURCES = automata.c
automata_LDADD = ../src/libmc.a

signal_SOURCES = signal.c
signal_LDADD = ../src/libmc.a

